add ReleasesListSwiper component

--- a/_components/LogoLink/styles.scss
+++ b/_components/LogoLink/styles.scss
@@ -3,7 +3,7 @@
   align-items: center;
 
   &__icon {
-    @extend .icon-public;
+    @extend .icon-sentimony-records-logo;
     margin-right: 24px;
   }
 
