--- a/_components/ReleasePage/styles.scss
+++ b/_components/ReleasePage/styles.scss
@@ -32,7 +32,7 @@ article.item {
     width: 100%;
     overflow: hidden;
     max-width: 320px;
-    border: 1px solid #4E4E4E;
+    border: 1px solid #4e4e4e;
     margin-bottom: 20px;
     background: #333;
 
