--- a/_components/ReleasePage/styles.scss
+++ b/_components/ReleasePage/styles.scss
@@ -1,4 +1,67 @@
-article.item {
+.releases-page {
+  margin: 0 auto;
+  max-width: 1277px;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  border-top: 1px solid rgba(#fff,.3);
+  padding-top: 1em;
+
+  &__cover {
+    @include ratio(190px,1,1);
+    min-width: 190px;
+    border-radius: 8px;
+    overflow: hidden;
+    // background: #d8d8d8;
+    box-shadow: 0 2px 10px 0 rgba(#000,.5);
+
+    &-link {
+    }
+    
+    &-img {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__info {
+    display: block;
+    // flex-basis: (50%*2/3);
+  }
+
+  &__title {
+    font-size: 32px;
+    margin: 0;
+  }
+
+  &__listen-on {
+    font-size: 14px;
+    color: rgba(#fff,.5);
+  }
+
+  &__player {
+    display: block;
+    flex-basis: 50%;
+    border-radius: 6px;
+    overflow: hidden;
+
+    &-iframe {
+      display: block;
+      width: 100%;
+      overflow: hidden;
+      max-width: 637px;
+      border: none;
+      background: #333;
+      height: 504px;
+    }
+  }
+}
+
+.item {
   text-align: left;
   padding: 0 5%;
 
@@ -27,7 +90,7 @@ article.item {
   &.item-news {
   }
 
-  iframe.bandcamp-item {
+  .bandcamp-item {
     display: block;
     width: 100%;
     overflow: hidden;
