--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1,5 +1,6 @@
 @import '../node_modules/coriolan-ui/tools/variables';
 @import '../node_modules/coriolan-ui/mixins/media';
+@import '../node_modules/coriolan-ui/mixins/ratio';
 @import '../node_modules/normalize.css/normalize';
 @import '../node_modules/swiper/dist/css/swiper';
 
