--- a/_components/LogoLink/styles.scss
+++ b/_components/LogoLink/styles.scss
@@ -7,6 +7,12 @@
     margin-right: 24px;
   }
 
+  &__logo {
+    width: 40px;
+    display: block;
+    margin-right: 24px;
+  }
+
   &__text {
     text-align: left;
   }
