--- a/_components/ReleasesListSwiper/styles.scss
+++ b/_components/ReleasesListSwiper/styles.scss
@@ -10,6 +10,34 @@
     margin-bottom: .3em;
   }
 
+  &__item {
+    
+    &-cover {
+      @include ratio(120px,1,1);
+      min-width: 120px;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 2px 10px 0 rgba(#000,.5);
+
+      &-link {
+      }
+
+      &-img {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    &-title {
+      color: #fff;
+      font-size: 14px;
+    }
+  }
+
   .swiper-container {
   }
 }
