--- a/_components/LogoLink/styles.scss
+++ b/_components/LogoLink/styles.scss
@@ -1,10 +1,12 @@
 .logolink {
+  padding: .4em 1em !important;
   display: flex;
   align-items: center;
 
   &__icon {
     @extend .icon-sentimony-records-logo;
     margin-right: 24px;
+    display: none;
   }
 
   &__logo {
