--- a/_components/Hero/styles.scss
+++ b/_components/Hero/styles.scss
@@ -44,30 +44,30 @@
         margin: 0 0 20px;
         font-weight: 400;
 
-        @include media($One) {
-          font-size: 40px;
-          letter-spacing: 2px;
-        }
+        // @include media($One) {
+        //   font-size: 40px;
+        //   letter-spacing: 2px;
+        // }
 
-        @include media($Two) {
-          font-size: 55px;
-          letter-spacing: 5px;
-        }
+        // @include media($Two) {
+        //   font-size: 55px;
+        //   letter-spacing: 5px;
+        // }
 
-        @include media($Three) {
-          font-size: 70px;
-          letter-spacing: 8px;
-        }
+        // @include media($Three) {
+        //   font-size: 70px;
+        //   letter-spacing: 8px;
+        // }
 
-        @include media($ThreeSidebar) {
-          font-size: 85px;
-          letter-spacing: 11px;
-        }
+        // @include media($ThreeSidebar) {
+        //   font-size: 85px;
+        //   letter-spacing: 11px;
+        // }
 
-        @include media($Four) {
-          font-size: 100px;
-          letter-spacing: 14px;
-        }
+        // @include media($Four) {
+        //   font-size: 100px;
+        //   letter-spacing: 14px;
+        // }
       }
 
       h2 {
@@ -79,30 +79,30 @@
         font-weight: 400;
         line-height: 2;
 
-        @include media($One) {
-          font-size: 12px;
-          letter-spacing: 4px;
-        }
+        // @include media($One) {
+        //   font-size: 12px;
+        //   letter-spacing: 4px;
+        // }
 
-        @include media($Two) {
-          font-size: 14px;
-          letter-spacing: 8px;
-        }
+        // @include media($Two) {
+        //   font-size: 14px;
+        //   letter-spacing: 8px;
+        // }
 
-        @include media($Three) {
-          font-size: 16px;
-          letter-spacing: 12px;
-        }
+        // @include media($Three) {
+        //   font-size: 16px;
+        //   letter-spacing: 12px;
+        // }
 
-        @include media($ThreeSidebar) {
-          font-size: 18px;
-          letter-spacing: 16px;
-        }
+        // @include media($ThreeSidebar) {
+        //   font-size: 18px;
+        //   letter-spacing: 16px;
+        // }
 
-        @include media($Four) {
-          font-size: 20px;
-          letter-spacing: 20px;
-        }
+        // @include media($Four) {
+        //   font-size: 20px;
+        //   letter-spacing: 20px;
+        // }
       }
     }
   }
