--- a/_components/ReleasePage/styles.scss
+++ b/_components/ReleasePage/styles.scss
@@ -2,12 +2,23 @@
   margin: 0 auto;
   max-width: 1278px;
   text-align: left;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   border-top: 1px solid rgba(#fff,.3);
   padding-top: 1em;
   padding-bottom: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+
+  @include media(M) {
+    flex-direction: row;
+  }
+
+  &__media {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
   &__cover {
     @include ratio(190px,1,1);
@@ -16,10 +27,8 @@
     overflow: hidden;
     box-shadow: 0 2px 10px 0 rgba(#000,.5);
     margin-right: 1.1em;
+    background-color: rgba(#000,.5);
 
-    &-link {
-    }
-    
     &-img {
       display: block;
       position: absolute;
@@ -32,7 +41,7 @@
 
   &__info {
     display: block;
-    flex-basis: (50%*2/3);
+    // flex-basis: (50%*2/3);
     box-sizing: border-box;
     padding-right: 1.1em;
   }
@@ -84,6 +93,12 @@
     display: block;
     flex-basis: 50%;
     height: 504px;
+    background-color: rgba(#000,.5);
+    border-radius: 6px;
+    overflow: hidden;
+    width: 100%;
+    max-width: 635px;
+    margin: 0 auto;
 
     &-iframe {
       border-radius: 6px;
@@ -93,8 +108,9 @@
       overflow: hidden;
       max-width: 637px;
       border: none;
-      background: #333;
+      // background: #333;
       height: 504px;
+      margin: 0 auto;
     }
   }
 }
