--- a/_components/ReleasesList/styles.scss
+++ b/_components/ReleasesList/styles.scss
@@ -7,25 +7,25 @@
     padding: 5px;
     box-sizing: border-box;
 
-    @include media($One) {
-      width: 100%;
-    }
+    // @include media($One) {
+    //   width: 100%;
+    // }
 
-    @include media($Two) {
-      width: 50%;
-    }
+    // @include media($Two) {
+    //   width: 50%;
+    // }
 
-    @include media($Three) {
-      width: 33.333333%;
-    }
+    // @include media($Three) {
+    //   width: 33.333333%;
+    // }
 
-    @include media($ThreeSidebar) {
-      width: 25%;
-    }
+    // @include media($ThreeSidebar) {
+    //   width: 25%;
+    // }
 
-    @include media($Four) {
-      width: 20%;
-    }
+    // @include media($Four) {
+    //   width: 20%;
+    // }
 
     .image-container {
       overflow: hidden;
