--- a/_components/ReleasePage/styles.scss
+++ b/_components/ReleasePage/styles.scss
@@ -1,33 +1,57 @@
 .releases-page {
-  margin: 0 auto;
-  max-width: 1278px;
-  text-align: left;
-  border-top: 1px solid rgba(#fff,.3);
-  padding-top: 1em;
-  padding-bottom: 1em;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: column;
+  position: relative;
 
-  @include media(M) {
-    flex-direction: row;
+  &__wrapper {
+    margin: 0 auto;
+    max-width: 1278px;
+    text-align: left;
+    border-top: 1px solid rgba(#fff,.3);
+    padding: 1em .6em;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    position: relative;
+
+    @include media(L) {
+      flex-direction: row;
+    }
+  }
+
+  &__deco-triangle {
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
   }
 
   &__media {
     display: flex;
-    align-items: center;
+    // align-items: center;
     justify-content: space-between;
+    margin-bottom: 1em;
+    width: 100%;
+    position: relative;
+
+    @include media(L) {
+      width: auto;
+    }
   }
 
   &__cover {
-    @include ratio(190px,1,1);
-    min-width: 190px;
+    @include ratio(100px,1,1);
+    min-width: 100px;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 2px 10px 0 rgba(#000,.5);
     margin-right: 1.1em;
     background-color: rgba(#000,.5);
+
+    @include media(M) {
+      @include ratio(190px,1,1);
+      min-width: 190px;
+    }
 
     &-img {
       display: block;
@@ -36,21 +60,28 @@
       left: 0;
       width: 100%;
       height: 100%;
+      // height: auto;
+      // transform: scale(1.2);
     }
   }
 
   &__info {
     display: block;
     // flex-basis: (50%*2/3);
+    width: 100%;
     box-sizing: border-box;
     padding-right: 1.1em;
   }
 
   &__title {
-    font-size: 32px;
+    font-size: 18px;
     margin: 0;
     color: #fff;
     text-transform: capitalize;
+
+    @include media(S) {
+      font-size: 32px;
+    }
   }
 
   &__listen-on {
@@ -70,35 +101,50 @@
     font-size: 16px;
     box-sizing: border-box;
     height: 40px;
-  }
 
-  &__bandcamp-btn-icon {
-    @extend .icon-bandcamp;
-    display: inline-block;
-    margin-right: .7em;
-    transform: translate3d(0,2px,0);
-    display: none;
-  }
+    &-icon {
+      @extend .icon-bandcamp;
+      display: inline-block;
+      transform: translate3d(0,2px,0);
+      display: none;
+    }
 
-  &__bandcamp-btn-img {
-    // @extend .icon-bandcamp;
-    width: auto;
-    height: 18px;
-    display: inline-block;
-    margin-right: .7em;
-    transform: translate3d(0,3px,0);
+    &-img {
+      // @extend .icon-bandcamp;
+      width: auto;
+      height: 18px;
+      display: inline-block;
+      transform: translate3d(0,3px,0);
+    }
+
+    &-text {
+      display: none;
+
+      @include media(S) {
+        display: inline-block;
+        margin-left: .7em;
+      }
+    }
   }
 
   &__player {
     display: block;
     flex-basis: 50%;
-    height: 504px;
+    height: 538px;
+    box-shadow: 0 2px 10px 0 rgba(#000,.5);
     background-color: rgba(#000,.5);
     border-radius: 6px;
     overflow: hidden;
     width: 100%;
+    // max-width: 635px;
+    // width: 635px;
+    // margin: 0 auto;
     max-width: 635px;
-    margin: 0 auto;
+    position: relative;
+
+    @include media(M) {
+      min-width: 635px;
+    }
 
     &-iframe {
       border-radius: 6px;
@@ -106,10 +152,10 @@
       display: block;
       width: 100%;
       overflow: hidden;
-      max-width: 637px;
+      max-width: 635px;
       border: none;
       // background: #333;
-      height: 504px;
+      height: 538px;
       margin: 0 auto;
     }
   }
