add buttons concept

--- a/_components/Footer/styles.scss
+++ b/_components/Footer/styles.scss
@@ -41,6 +41,7 @@
       padding: $m 0;
       border: 1px solid rgba($accent-color, .1);
       border-width: 1px 0;
+      display: none;
 
       &--small {
         font-size: .8em;
