--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -11,6 +11,7 @@
 @import 'vendor/svg-icons/svg-icons';
 
 @import 'base';
+@import 'ui/buttons';
 @import 'list';
 @import 'filters';
 @import 'ArtistList';
