--- a/_components/Hero/styles.scss
+++ b/_components/Hero/styles.scss
@@ -4,6 +4,7 @@
   text-align: center;
   background: $bg-color;
   background-size: cover;
+  position: relative;
 
   .overlay {
     position: absolute;
