--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -23,3 +23,4 @@
 @import '_components/ReleasesListSwiper/styles';
 @import '_components/ReleasePage/styles';
 @import '_components/Footer/styles';
+@import '_components/SVG/deco-triangle';
