--- a/_components/LogoLink/styles.scss
+++ b/_components/LogoLink/styles.scss
@@ -1,5 +1,5 @@
 .logolink {
-  padding: .4em 1em !important;
+  padding: .4em .8em;
   display: flex;
   align-items: center;
 
@@ -12,7 +12,7 @@
   &__logo {
     width: 40px;
     display: block;
-    margin-right: 24px;
+    margin-right: .8em;
   }
 
   &__text {
