--- a/_components/ReleasePage/styles.scss
+++ b/_components/ReleasePage/styles.scss
@@ -147,7 +147,7 @@
 
   &__player {
     display: block;
-    flex-basis: 50%;
+    // flex-basis: 50%;
     height: 538px;
     box-shadow: 0 2px 10px 0 rgba(#000,.5);
     background-color: rgba(#000,.5);
