--- a/_components/Hero/styles.scss
+++ b/_components/Hero/styles.scss
@@ -46,6 +46,7 @@
         font-weight: 400;
         font-size: 40px;
         letter-spacing: 2px;
+        text-transform: uppercase;
 
         @include media(S) {
           font-size: 55px;
