--- a/_components/ReleasePage/styles.scss
+++ b/_components/ReleasePage/styles.scss
@@ -1,7 +1,3 @@
-.release-page__content {
-  display: none;
-}
-
 .release-page {
   position: relative;
   padding: 0 .6em;
@@ -14,12 +10,11 @@
     padding: 1.8em 0;
     box-sizing: border-box;
     position: relative;
+    z-index: 40;
     display: flex;
-    // align-items: center;
     align-items: flex-start;
     justify-content: space-between;
     flex-direction: column;
-    z-index: 30;
 
     @include media(L) {
       flex-direction: row;
@@ -41,7 +36,6 @@
   }
 
   &__cover {
-    // @include ratio(100px,1,1);
     min-width: 100px;
     height: 100px;
     border-radius: 8px;
@@ -52,7 +46,6 @@
     align-items: stretch;
 
     @include media(M) {
-      // @include ratio(190px,1,1);
       min-width: 190px;
       height: 190px;
     }
@@ -64,22 +57,13 @@
       background-color: rgba(#000,.5);
 
       @include media(M) {
-        // @include ratio(190px,1,1);
         max-width: 190px;
       }
-      // position: absolute;
-      // top: 0;
-      // left: 0;
-      // width: 100%;
-      // height: 100%;
-      // height: auto;
-      // transform: scale(1.2);
     }
   }
 
   &__info {
     display: block;
-    // flex-basis: (50%*2/3);
     width: 100%;
     box-sizing: border-box;
     padding-right: 1.1em;
@@ -104,11 +88,12 @@
   &__listen-on {
     font-size: 14px;
     color: rgba(#fff,.5);
-    margin-bottom: .7em;
+    // margin-bottom: .7em;
   }
 
   &__bandcamp-btn {
     @extend .btn;
+    margin-top: .7em;
 
     &-icon {
       @extend .icon-bandcamp;
@@ -126,6 +111,7 @@
 
   &__youtube-btn {
     @extend .btn;
+    margin-top: .7em;
 
     &-icon {
       @extend .icon-youtube;
@@ -147,16 +133,12 @@
 
   &__player {
     display: block;
-    // flex-basis: 50%;
     height: 538px;
     box-shadow: 0 2px 10px 0 rgba(#000,.5);
     background-color: rgba(#000,.5);
     border-radius: 6px;
     overflow: hidden;
     width: 100%;
-    // max-width: 635px;
-    // width: 635px;
-    // margin: 0 auto;
     max-width: 540px;
     position: relative;
 
@@ -172,9 +154,35 @@
       overflow: hidden;
       max-width: 540px;
       border: none;
-      // background: #333;
       height: 538px;
       margin: 0 auto;
+    }
+  }
+}
+
+.release-page-content {
+  // display: none;
+  text-align: left;
+  background-color: #fff;
+  color: #000;
+  position: relative;
+  padding: 2em .6em 3em;
+
+  @include media(M) {
+    padding-bottom: 8em;
+  }
+
+  &__wrapper {
+    max-width: 600px;
+    position: relative;
+    z-index: 40;
+
+    @include media(L) {
+      margin: 0 auto;
+    }
+
+    a {
+      color: #0046ff;
     }
   }
 }
