--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -20,3 +20,4 @@
 @import '_components/ReleasePage/styles';
 @import '_components/Footer/styles';
 @import '_components/SVG/deco-triangle';
+@import '_components/IframeSize/styles';
