--- a/_components/Hero/styles.scss
+++ b/_components/Hero/styles.scss
@@ -2,7 +2,7 @@
   height: 100%;
   width: 100%;
   text-align: center;
-  background: $bg-color;
+  background: #000;
   background-size: cover;
   position: relative;
 
@@ -12,7 +12,7 @@
     right: 0;
     left: 0;
     bottom: 0;
-    background: $bg-color;
+    background: #000;
     background-position: center;
     background-repeat: no-repeat;
     background-image: url(/assets/img/backgrounds/hero.jpg);
