add og-image cell

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@ layout: compress
 
   <title>{% if page.title %}{{ page.title }} · {% endif %}Sentimony Records{% if page.titleAfter %} · {{ page.titleAfter }}{% endif %}</title>
   <meta name="description" content="{{ page.description }}">
-  <meta property="og:image" content="https://content.sentimony.com/assets/img/og-images/sentimony/home.jpg">
+  <meta property="og:image" content="{{ page.og-image }}">
 
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
   <link rel="shortcut icon" href="https://content.sentimony.com/assets/img/favicons/sentimony/favicon-32.png">
