upd background add menu page

--- a/_scss/ui/_base.scss
+++ b/_scss/ui/_base.scss
@@ -72,7 +72,8 @@ html {
 
 body {
   // background: #000 url(../img/subtlepatterns/dark_wood.png);
-  background: #000;
+  background-color: #000;
+  background-image:  url(https://content.sentimony.com/assets/img/backgrounds/sombrero-red.jpg);
   font: 400 15px/1.5 'Montserrat', sans-serif;
   color: $text-color;
   -webkit-font-smoothing: antialiased;
