--- a/_scss/ui/_base.scss
+++ b/_scss/ui/_base.scss
@@ -74,6 +74,9 @@ body {
   // background: #000 url(../img/subtlepatterns/dark_wood.png);
   background-color: #000;
   background-image:  url(https://content.sentimony.com/assets/img/backgrounds/sombrero-red.jpg);
+  background-attachment: fixed;
+  // background-size: cover;
+  // background-position: center;
   font: 400 15px/1.5 'Montserrat', sans-serif;
   color: $text-color;
   -webkit-font-smoothing: antialiased;
