--- a/_components/ReleasesListSwiper/styles.scss
+++ b/_components/ReleasesListSwiper/styles.scss
@@ -40,7 +40,6 @@
       // overflow: hidden;
       margin: 0 auto .2em;
       position: relative;
-      background-color: rgba(#000,.5);
       @include ratio(60px,1,1);
       min-width: 60px;
 
@@ -53,6 +52,7 @@
       &:before {
         content: '';
         position: absolute;
+        z-index: 10;
         top: 0;
         left: 0;
         border-radius: 8px;
@@ -72,11 +72,24 @@
         }
       }
 
+      &:after {
+        content: '';
+        position: absolute;
+        z-index: 20;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 8px;
+        background-color: rgba(#000,.5);
+      }
+
       &-img {
         border-radius: 8px;
         box-shadow: 0 2px 10px 0 rgba(#000,.5);
         display: block;
         position: absolute;
+        z-index: 30;
         top: 0;
         left: 0;
         width: 100%;
