--- a/_scss/ui/_base.scss
+++ b/_scss/ui/_base.scss
@@ -72,7 +72,8 @@ html {
 
 body {
   // background: #000 url(../img/subtlepatterns/dark_wood.png);
-  background-color: #000;
+  // background-color: #000;
+  background-color: #8f0100;
   background-image:  url(https://content.sentimony.com/assets/img/backgrounds/sombrero-red.jpg);
   background-attachment: fixed;
   // background-size: cover;
