--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -8,8 +8,7 @@
 
 @import 'ui/base';
 @import 'ui/buttons';
-@import 'list';
-@import 'filters';
+@import 'ui/unvisible';
 @import '_components/ArtistsList/styles';
 @import '_components/Header/styles';
 @import '_components/LogoLink/styles';
