--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@ layout: compress
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %}{{ page.title }} · {% endif %}Sentimony Records{% if page.titleAfter %} · {{ page.titleAfter }}{% endif %}</title>
-  <meta name="description" content="{% if page.category == 'releases' %}{{ page.tracks_no }} tracks, {{ page.date | date: '%Y' }}{% else %}{{ page.description }}{% endif %}">
+  <meta name="description" content="{% if page.category == 'releases' %}{{ page.tracks_no }} tracks {{ page.style }} {{ page.format }}, {{ page.date | date: '%Y' }}{% else %}{{ page.description }}{% endif %}">
   <meta property="og:image" content="{% if page.category == 'releases' %}{% if page.cover %}https://content.sentimony.com/assets/img/releases/og-images/{{ page.cat_no }}/{{ page.slug }}.jpg{% else %}https://content.sentimony.com/assets/img/og-images/sentimony/home.jpg{% endif %}{% else %}{{ page.og-image }}{% endif %}">
 
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
